--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap');
+
 :root {
---primary-font: 'Raleway', sans-serif;
---primary-color: #161616;
+	--primary-font: 'Raleway', sans-serif;
+	--primary-font-color: #991e1e;
+}
+
+//elements
+ul {
+  list-style: none;
+}
+
+h3 {
+	font-family: var(--primary-font);
+	color: var(--primary-color);
 }
