--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,11 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap');
 
+//Settings
 :root {
 	--primary-font: 'Raleway', sans-serif;
 	--primary-font-color: #991e1e;
 }
 
-//elements
+//Tools
+
+//Generic
+
+//Elements
 ul {
   list-style: none;
 }
@@ -14,3 +19,9 @@ h3 {
 	font-family: var(--primary-font);
 	color: var(--primary-color);
 }
+
+//Objects
+
+//Components
+
+//Overides
