--- a/src/styles/_generic.scss
+++ b/src/styles/_generic.scss
@@ -1,28 +1,15 @@
 html {
-  box-sizing: border-box;
+	box-sizing: border-box;
 	line-height: 1.15;
 	-webkit-text-size-adjust: 100%;
 }
-*, *:before, *:after {
-  box-sizing: inherit;
+*,
+*:before,
+*:after {
+	box-sizing: inherit;
 }
 body {
 	margin: 0;
-    ::-webkit-scrollbar {
-  width: 8px;            /* width of the entire scrollbar */
-}
-
-::-webkit-scrollbar-track {
-  
-  opacity: 0;
-  border-radius: 5px;     /* color of the tracking area */
-}
-
-::-webkit-scrollbar-thumb {
-
-  background-color: var(--dark-primary);    /* color of the scroll thumb */
-  border-radius: 20px;       /* roundness of the scroll thumb */
-}
 }
 main {
 	display: block;
@@ -48,17 +35,21 @@ abbr[title] {
 	text-decoration: underline;
 	text-decoration: underline dotted;
 }
-b,strong {
+b,
+strong {
 	font-weight: bolder;
 }
-code,kbd,samp {
+code,
+kbd,
+samp {
 	font-family: monospace, monospace;
 	font-size: 1em;
 }
 small {
 	font-size: 80%;
 }
-sub,sup {
+sub,
+sup {
 	font-size: 75%;
 	line-height: 0;
 	position: relative;
@@ -73,26 +64,41 @@ sup {
 img {
 	border-style: none;
 }
-button,input,optgroup,select,textarea {
+button,
+input,
+optgroup,
+select,
+textarea {
 	font-family: inherit;
 	font-size: 100%;
 	line-height: 1.15;
 	margin: 0;
 }
-button,input {
+button,
+input {
 	overflow: visible;
 }
-button,select {
+button,
+select {
 	text-transform: none;
 }
-button,[type="button"],[type="reset"],[type="submit"] {
+button,
+[type='button'],
+[type='reset'],
+[type='submit'] {
 	-webkit-appearance: button;
 }
-button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner {
+button::-moz-focus-inner,
+[type='button']::-moz-focus-inner,
+[type='reset']::-moz-focus-inner,
+[type='submit']::-moz-focus-inner {
 	border-style: none;
 	padding: 0;
 }
-button:-moz-focusring,[type="button"]:-moz-focusring,[type="reset"]:-moz-focusring,[type="submit"]:-moz-focusring {
+button:-moz-focusring,
+[type='button']:-moz-focusring,
+[type='reset']:-moz-focusring,
+[type='submit']:-moz-focusring {
 	outline: 1px dotted ButtonText;
 }
 fieldset {
@@ -112,18 +118,20 @@ progress {
 textarea {
 	overflow: auto;
 }
-[type="checkbox"],[type="radio"] {
+[type='checkbox'],
+[type='radio'] {
 	box-sizing: border-box;
 	padding: 0;
 }
-[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button {
+[type='number']::-webkit-inner-spin-button,
+[type='number']::-webkit-outer-spin-button {
 	height: auto;
 }
-[type="search"] {
+[type='search'] {
 	-webkit-appearance: textfield;
 	outline-offset: -2px;
 }
-[type="search"]::-webkit-search-decoration {
+[type='search']::-webkit-search-decoration {
 	-webkit-appearance: none;
 }
 ::-webkit-file-upload-button {
