--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -5,30 +5,14 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
 body {
   margin: 0;
-}
-
-body ::-webkit-scrollbar {
-  width: 8px;
-  /* width of the entire scrollbar */
-}
-
-body ::-webkit-scrollbar-track {
-  opacity: 0;
-  border-radius: 5px;
-  /* color of the tracking area */
-}
-
-body ::-webkit-scrollbar-thumb {
-  background-color: var(--dark-primary);
-  /* color of the scroll thumb */
-  border-radius: 20px;
-  /* roundness of the scroll thumb */
 }
 
 main {
@@ -61,11 +45,14 @@ abbr[title] {
   text-decoration: underline dotted;
 }
 
-b, strong {
+b,
+strong {
   font-weight: bolder;
 }
 
-code, kbd, samp {
+code,
+kbd,
+samp {
   font-family: monospace, monospace;
   font-size: 1em;
 }
@@ -74,7 +61,8 @@ small {
   font-size: 80%;
 }
 
-sub, sup {
+sub,
+sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
@@ -93,31 +81,46 @@ img {
   border-style: none;
 }
 
-button, input, optgroup, select, textarea {
+button,
+input,
+optgroup,
+select,
+textarea {
   font-family: inherit;
   font-size: 100%;
   line-height: 1.15;
   margin: 0;
 }
 
-button, input {
+button,
+input {
   overflow: visible;
 }
 
-button, select {
+button,
+select {
   text-transform: none;
 }
 
-button, [type="button"], [type="reset"], [type="submit"] {
+button,
+[type='button'],
+[type='reset'],
+[type='submit'] {
   -webkit-appearance: button;
 }
 
-button::-moz-focus-inner, [type="button"]::-moz-focus-inner, [type="reset"]::-moz-focus-inner, [type="submit"]::-moz-focus-inner {
+button::-moz-focus-inner,
+[type='button']::-moz-focus-inner,
+[type='reset']::-moz-focus-inner,
+[type='submit']::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
 
-button:-moz-focusring, [type="button"]:-moz-focusring, [type="reset"]:-moz-focusring, [type="submit"]:-moz-focusring {
+button:-moz-focusring,
+[type='button']:-moz-focusring,
+[type='reset']:-moz-focusring,
+[type='submit']:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
@@ -142,21 +145,23 @@ textarea {
   overflow: auto;
 }
 
-[type="checkbox"], [type="radio"] {
+[type='checkbox'],
+[type='radio'] {
   box-sizing: border-box;
   padding: 0;
 }
 
-[type="number"]::-webkit-inner-spin-button, [type="number"]::-webkit-outer-spin-button {
+[type='number']::-webkit-inner-spin-button,
+[type='number']::-webkit-outer-spin-button {
   height: auto;
 }
 
-[type="search"] {
+[type='search'] {
   -webkit-appearance: textfield;
   outline-offset: -2px;
 }
 
-[type="search"]::-webkit-search-decoration {
+[type='search']::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -201,6 +206,11 @@ h3 {
   color: var(--dark-primary);
 }
 
+input:focus {
+  outline: thin white;
+  border-color: var(--dark-primary);
+}
+
 .student-search-wrapper {
   width: 60%;
   height: 75vh;
@@ -210,7 +220,7 @@ h3 {
   background-color: var(--light-primary);
   border-radius: 10px;
   overflow-y: auto;
-  padding: 0 1rem;
+  padding: 0 0.5rem;
 }
 
 .search-input {
@@ -218,6 +228,8 @@ h3 {
   border-top: none;
   border-right: none;
   border-left: none;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
   padding: 1rem 0;
   border-color: var(--light-grey);
   font-family: var(--primary-font);
@@ -226,13 +238,42 @@ h3 {
 }
 
 .student-list {
-  width: 80%;
+  width: 100%;
 }
 
 .student-item {
   display: grid;
-  grid-template-columns: 1fr 2fr 3fr;
+  grid-template-columns: 1fr 5fr 2fr;
   border-bottom: 1px solid var(--light-grey);
+  padding: 1rem 0;
+}
+
+.student-item .image-wrapper {
+  margin: 1rem;
+  display: flex;
+}
+
+.student-item .image-wrapper img {
+  align-self: center;
+  width: 100%;
+  border: 1px solid var(--dark-primary);
+  border-radius: 50%;
+}
+
+.student-item .info-wrapper {
+  padding: 0 1rem;
+}
+
+.student-item .info-wrapper h3 {
+  margin: 0;
+  font-size: var(--xl-font);
+  font-weight: var(--heavy-font);
+  text-transform: uppercase;
+  color: black;
+}
+
+.student-item .grades-wrapper {
+  display: none;
 }
 
 :root {
