--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -18,9 +18,11 @@
 	--xl-font: 2.5rem;
 
 	//Colors
-	--dark-primary: rgb(90, 90, 90);
+	--black: #000;
+	--dark-primary: rgb(146, 146, 146);
+	--md-grey: #ACACAC;
 	--light-grey: #EFEFEF;
-	--light-primary: white;
+	--white: #FFF;
 
 	//Spacing
 
