--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -1,15 +1,14 @@
 .student-search-wrapper {
-	width: 60%;
+	width: 60vw;
+	max-width: 75rem;
 	height: 75vh;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	background-color: var(--light-primary);
-	border-radius: 10px;
-	overflow-y: auto;
-	padding: 0 0.5rem;
+	background-color: var(--white);
+	border-radius: 1rem;
+	padding-left: 0.5rem;
 }
-
 .search-input {
 	width: 100%;
 	border-top: none;
@@ -26,11 +25,32 @@
 
 .student-list {
 	width: 100%;
+	overflow-y: auto;
+	scrollbar-width: thin;
+	scrollbar-color: var(--white) transparent;
+	&::-webkit-scrollbar {
+		width: 8px;
+	}
+	&::-webkit-scrollbar-track {
+		background-color: transparent;
+		border-top-right-radius: 1rem;
+		border-bottom-right-radius: 1rem;
+	}
+	&::-webkit-scrollbar-thumb {
+		background-color: var(--white);
+		border-radius: 1rem;
+	}
+	&:hover {
+		scrollbar-color: var(--black) transparent;
+		&::-webkit-scrollbar-thumb {
+			background-color: var(--black);
+			border-radius: 1rem;
+		}
+	}
 }
-
 .student-item {
 	display: grid;
-	grid-template-columns: 1fr 5fr 2fr;
+	grid-template-columns: 2fr 6fr auto;
 	border-bottom: 1px solid var(--light-grey);
 	padding: 1rem 0;
 	.image-wrapper {
@@ -45,15 +65,31 @@
 	}
 	.info-wrapper {
 		padding: 0 1rem;
-    h3 {
-      margin: 0;
-      font-size: var(--xl-font);
-      font-weight: var(--heavy-font);
-      text-transform: uppercase;
-      color: black;
-    }
+		h3 {
+			margin: 0;
+			text-transform: uppercase;
+		}
+		.student-info {
+			padding: 1rem;
+			font-family: var(--primary-font);
+			color: var(--black);
+			line-height: 1.5;
+		}
 	}
 	.grades-wrapper {
-		display: none;
+		visibility: hidden;
+	}
+	.toggle-wrapper {
+		display: flex;
+		justify-content: flex-end;
+		align-items: flex-start;
+		button {
+			background: none;
+			border: none;
+			svg {
+				width: 60%;
+				color: var(--md-grey);
+			}
+		}
 	}
 }
