--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -5,7 +5,7 @@ main {
 	align-items: center;
 	justify-content: center;
 	background-color: var(--light-grey);
- }
+}
 
 ul {
 	list-style: none;
@@ -17,10 +17,16 @@ h3 {
 	font-family: var(--primary-font);
 	font-size: var(--xl-font);
 	font-weight: var(--heavy-font);
-  color: var(--black);
+	color: var(--black);
 }
 
 input {
+	border-top: none;
+	border-right: none;
+	border-left: none;
+	font-family: var(--primary-font);
+	font-size: var(--lg-font);
+	font-weight: var(--light-font);
 	&:focus {
 		outline: thin white;
 		border-color: var(--dark-primary);
